# sap-wiki

./: .gitignore  PRODUCT.md  README.md  sap-wiki.code-workspace
dumper/: main.py  pyproject.toml
dumper/legacy/dump/: dump_ability_methods.py  dump_minion_methods.py  dump_minion_methods2.py  dump_spell_methods.py
dumper/legacy/extract/: extract_ability_data.py  extract_food_prices_frida.py  extract_stats_frida.py  extract_triggers_frida.js  extract_triggers_frida.py
dumper/output/: dice_map.json  foods.json  icon_map.json  pets.json  toys.json
dumper/sap_dump/: asset_extractor.py  builder.py  constants.py  frida_runner.py  hooks.js  icon_map_extractor.py  linkbacks.py  unitypy_extractor.py
mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml
mcp/sap_mcp/: __main__.py  cleaning.py  loader.py  models.py  search.py  server.py
wiki/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
wiki/public/: robots.txt
wiki/scripts/: copy-assets.mjs
wiki/src/components/: AbilityText.astro  Sprite.astro  StatIcon.astro  TierBadge.astro  TierFilter.astro  TypeFilter.astro
wiki/src/layouts/: Layout.astro
wiki/src/lib/: data.ts
wiki/src/pages/: index.astro  mcp.astro
wiki/src/pages/foods/: [name].astro  index.astro
wiki/src/pages/pets/: [name].astro  index.astro
wiki/src/pages/toys/: [name].astro  index.astro
wiki/src/styles/: global.css
