[project]
name = "sap-mcp"
version = "0.1.0"
description = "MCP server exposing Super Auto Pets game data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sap_mcp"]
